--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,19 @@
 {
-    "manifest_version": 3,
-    "name": "Text Highlighter for AI Sites",
-    "version": "2.0",
-    "description": "Highlights all text on ChatGPT and Claude in yellow.",
-    "permissions": ["scripting"],
-    "host_permissions": [
-      "https://chat.openai.com/*",
-      "https://claude.ai/*"
-    ],
-    "content_scripts": [
-      {
-        "matches": [
-          "https://chatgpt.com/*",
-          "https://claude.ai/*"
-        ],
-        "js": ["content.js"],
-        "run_at": "document_idle"
-      }
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "ChatGPT Prompt Optimizer",
+  "version": "2.0",
+  "description": "Optimize long prompts and estimate token usage in ChatGPT.",
+  "permissions": ["storage", "scripting", "activeTab"],
+  "host_permissions": ["https://chatgpt.com/*"],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://chatgpt.com/*"],
+      "js": ["content.js"],
+      "css": ["styles.css"],
+      "run_at": "document_idle"
+    }
+  ]
+}
